--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,5 @@
-Django==3.1.1
+Django~=3.0.10
+psycopg2-binary==2.8.6
 djangorestframework==3.11.2
 djangorestframework-jsonapi==3.2.0
 django-filter==2.4.0
