--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,3 +3,5 @@ psycopg2-binary==2.8.6
 djangorestframework==3.11.2
 djangorestframework-jsonapi==3.2.0
 django-filter==2.4.0
+djoser==2.0.5
+djangorestframework-simplejwt==4.4.0
