--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,14 @@ services:
 #      - db
 #    depends_on:
 #      - db
+#    python manage.py flush --no-input &&
+
   web:
     build: ./app
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: >
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./app/:/usr/src/app/
     ports:
